Added wifi point mapping view mode

--- a/mapper/src/main/res/values/strings.xml
+++ b/mapper/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="enter_width_in_meters">Enter width in meters</string>
     <string name="enter_height_in_meters">Enter height in meters</string>
     <string name="create">Create</string>
+    <string name="map_point">Map point</string>
 </resources>
