--- a/mapper/src/main/res/values/strings.xml
+++ b/mapper/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="enter_width_in_meters">Enter width in meters</string>
     <string name="enter_height_in_meters">Enter height in meters</string>
     <string name="create">Create</string>
-    <string name="map_point">Map point</string>
+    <string name="map_point">Mapping mode</string>
     <string name="scanning">Scanning for wifi signals. Please wait</string>
     <string name="scan_completed">Scan completed</string>
     <string name="save_map">Save map</string>
@@ -20,4 +20,6 @@
     <string name="load_map">Load map</string>
     <string name="map_list_data_format" translatable="false">%s (%d points)</string>
     <string name="choose_map">Choose map</string>
+    <string name="mapping_mode">Mapping mode</string>
+    <string name="switch_to_view_mode">Switch to view mode</string>
 </resources>
