Added wifi points filtering

--- a/mapper/src/main/res/values/strings.xml
+++ b/mapper/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="mapping_mode">Mapping mode</string>
     <string name="switch_to_view_mode">Switch to view mode</string>
     <string name="navigation">Navigation</string>
+    <string name="select_wifis">Select wifis to be stored</string>
+    <string name="ok">OK</string>
 </resources>
